--- a/_AIRS2_L1b_HDFs_to_daily_CSV_v4.ipynb
+++ b/_AIRS2_L1b_HDFs_to_daily_CSV_v4.ipynb
@@ -9,11 +9,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import glob\n",
-    "import cartopy.crs as ccrs\n",
     "from pyhdf.SD import *\n",
     "from tqdm.auto import tqdm\n",
     "import datetime as dt\n",
-    "from calendar import monthrange"
+    "from calendar import monthrange\n",
+    "import os"
    ]
   },
   {
@@ -106,14 +106,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_L1b = 'D:\\\\L1b\\\\'\n",
+    "folder_L1b = 'C:\\\\data\\\\AIRS\\\\L1b\\\\'\n",
     "\n",
     "lat_width = 20 # bin height for eventual grouping/averaging\n",
     "lon_width = 20 # bin width for eventual grouping/averaging\n",
+    "years = [2003]\n",
     "months = ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12']"
    ]
   },
@@ -127,16 +128,20 @@
     "\n",
     "if 1 == 2:\n",
     "    bad_files = []\n",
-    "\n",
-    "    for file in glob.glob(folder_L1b+'*.hdf'):\n",
-    "        try: \n",
-    "            gp(file)\n",
-    "        except:\n",
-    "            print(file, 'is unreadable')\n",
-    "            bad_files = bad_files.append(file)\n",
-    "    print('list of bad files:')\n",
-    "    for file in bad_files:\n",
-    "        print(file)"
+    "    for year in tqdm(years, \"Years\", ncols = 400, position = 0):\n",
+    "        for month in tqdm(months, \"Months\", ncols = 400, position = 1, leave = False):\n",
+    "            for file in glob.glob(folder_L1b + str(year) + '\\\\' + month + '\\\\*.hdf'):\n",
+    "                try: \n",
+    "                    gp(file)\n",
+    "                except:\n",
+    "                    print(file, 'is unreadable')\n",
+    "                    bad_files = bad_files.append(file)\n",
+    "    if len(bad_files) > 0:\n",
+    "        print('list of bad files:')\n",
+    "        for file in bad_files:\n",
+    "            print(file)\n",
+    "    else:\n",
+    "        print('no bad files found.')"
    ]
   },
   {
@@ -154,8 +159,6 @@
    },
    "outputs": [],
    "source": [
-    "years = [2003]\n",
-    "\n",
     "for year in tqdm(years, \"Years\", ncols = 400, position = 0):\n",
     "    for month in tqdm(months, \"Months\", ncols = 400, position = 1, leave = False):\n",
     "        df1 = files_to_df(folder_L1b+str(year)+'\\\\'+month)\n",
@@ -176,7 +179,12 @@
     "                dfo = dfo.drop(['state', 'TotCld_4_CCfinal'], axis = 1) \n",
     "            except:\n",
     "                pass\n",
-    "            dfo.to_csv('D:\\\\'+str(year)+'_'+month+'_'+str(day)+'_L1b.csv.gz', compression = 'gzip', index=False, header=True)"
+    "            \n",
+    "            save_path = root_folder + '_AIRS2' + str(year)\n",
+    "            if not os.path.isdir(save_path):\n",
+    "                os.makedirs(save_path)\n",
+    "    \n",
+    "            dfo.to_csv(save_path+str(year)+'_'+month+'_'+str(day)+'_L1b.csv.gz', compression = 'gzip', index=False, header=True)"
    ]
   }
  ],
