Linked save folders

--- a/_AIRS2_L1b_HDFs_to_daily_CSV_v4.ipynb
+++ b/_AIRS2_L1b_HDFs_to_daily_CSV_v4.ipynb
@@ -180,11 +180,11 @@
     "            except:\n",
     "                pass\n",
     "            \n",
-    "            save_path = folder_L1b + '_AIRS2' + str(year)\n",
+    "            save_path = folder_L1b + '_AIRS2\\\\'\n",
     "            if not os.path.isdir(save_path):\n",
     "                os.makedirs(save_path)\n",
     "    \n",
-    "            dfo.to_csv(save_path+'\\\\'+str(year)+'_'+month+'_'+str(day)+'_L1b.csv.gz', compression = 'gzip', index=False, header=True)"
+    "            dfo.to_csv(save_path+str(year)+'_'+month+'_'+str(day)+'_L1b.csv.gz', compression = 'gzip', index=False, header=True)"
    ]
   }
  ],
