--- a/_AIRS6_Figs_v6.ipynb
+++ b/_AIRS6_Figs_v6.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_AIRS_20x20 = '.\\\\data\\\\AIRS\\\\L1B_globe_20x20\\\\'\n",
+    "folder_AIRS_20x20 = '.\\\\data\\\\AIRS\\\\_AIRS4\\\\'\n",
     "folder_LBL_20x20 = '.\\\\data\\\\LBL\\\\lgridd_v4\\\\'\n",
     "folder_LBL_cfc = '.\\\\data\\\\LBL\\\\cfc\\\\'\n",
     "\n",
@@ -1060,24 +1060,6 @@
     "if 1 == 2:\n",
     "    plt.savefig('FIG-S5.png')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Is the result here consistent with 0.53 W/m2?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = (dflg.T*weights).T.sum()\n",
-    "check = scipy.integrate.trapz(df[:1000].values, df[:1000].index.values) * 19 * np.pi / 1000\n",
-    "print('The LBL integral for 0.1 to 1000 cm-1 is', round(check, 3), 'W/m2, which is', round((check/-0.53*100), 1), 'percent of 0.53 W/m2')"
    ]
   }
  ],
