--- a/_AIRS2_L1b_HDFs_to_daily_CSV_v4.ipynb
+++ b/_AIRS2_L1b_HDFs_to_daily_CSV_v4.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,8 @@
     "\n",
     "lat_width = 20 # bin height for eventual grouping/averaging\n",
     "lon_width = 20 # bin width for eventual grouping/averaging\n",
-    "years = [2003]\n",
+    "#years = [2003]\n",
+    "years = np.arange(2003, 2022, 1)\n",
     "months = ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12']"
    ]
   },
@@ -124,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional, you can pre-read the files to ensure the code won't crash in the next cell\n",
+    "# Optional, you can pre-read the files to ensure the code won't crash when processing the data\n",
     "\n",
     "if 1 == 2:\n",
     "    bad_files = []\n",
