--- a/_AIRS3_daily_gzips_to_single_annual_csv_v3.ipynb
+++ b/_AIRS3_daily_gzips_to_single_annual_csv_v3.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob.glob('C:\\\\data\\\\AIRS\\\\_AIRS2\\\\*.csv.gz')\n",
+    "files = glob.glob('C:\\\\data\\\\AIRS\\\\L1b\\\\_AIRS2\\\\*.csv.gz')\n",
     "print('Found', len(files), 'files.')\n",
     "\n",
     "if 1 == 1:\n",
@@ -172,7 +172,7 @@
     "    print('dfo mem size:', round(dfo.memory_usage().sum()/2**20, 0), 'MB')\n",
     "    \n",
     "    # Prepare output folder\n",
-    "    save_path = 'C:\\\\data\\\\L1b\\\\_AIRS3\\\\'\n",
+    "    save_path = 'C:\\\\data\\\\AIRS\\\\L1b\\\\_AIRS3\\\\'\n",
     "        if not os.path.isdir(save_path):\n",
     "            os.makedirs(save_path)\n",
     "    \n",
