--- a/_AIRS6_Figs_v6.ipynb
+++ b/_AIRS6_Figs_v6.ipynb
@@ -37,9 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_AIRS_20x20 = '.\\\\data\\\\AIRS\\\\_AIRS4\\\\'\n",
-    "folder_LBL_20x20 = '.\\\\data\\\\LBL\\\\lgridd_v4\\\\'\n",
-    "folder_LBL_cfc = '.\\\\data\\\\LBL\\\\cfc\\\\'\n",
+    "folder_AIRS_20x20 = 'C:\\\\data\\\\AIRS\\\\L1b\\\\_AIRS4\\\\'\n",
+    "folder_LBL_20x20 = 'C:\\\\data\\\\LBL\\\\lgridd_v4\\\\'\n",
+    "folder_LBL_cfc = 'C:\\\\data\\\\LBL\\\\cfc\\\\'\n",
     "\n",
     "AIRS_ir = \"AIRS.2021.04.09.121.L1B.AIRS_Rad.v5.0.25.0.G21100105112.hdf\"\n",
     "AIRS_vis = \"AIRS.2021.04.09.121.L1B.VIS_Rad.v5.0.0.0.G21100104903.hdf\"\n",
