Removed deprecated functions

--- a/_AIRS3_daily_gzips_to_single_annual_csv_v3.ipynb
+++ b/_AIRS3_daily_gzips_to_single_annual_csv_v3.ipynb
@@ -50,11 +50,11 @@
     "                           (df['lon'] < lon_max) &\n",
     "                           (abs(df['sci']) == 2)])\n",
     "            if ct > 0:\n",
-    "                df_out = df_out.append(pd.DataFrame(df.loc[(df['lat'] >= lat_min) & \n",
-    "                                                           (df['lat'] < lat_max) & \n",
-    "                                                           (df['lon'] >= lon_min) &\n",
-    "                                                           (df['lon'] < lon_max) &\n",
-    "                                                           (abs(df['sci']) == 2)].mean(numeric_only=True)).T)\n",
+    "                df_out = pd.concat([df_out, pd.DataFrame(df.loc[(df['lat'] >= lat_min) & \n",
+    "                                                               (df['lat'] < lat_max) & \n",
+    "                                                               (df['lon'] >= lon_min) &\n",
+    "                                                               (df['lon'] < lon_max) &\n",
+    "                                                               (abs(df['sci']) == 2)].mean(numeric_only=True)).T])\n",
     "                df_out.iloc[-1].at['count'] = ct\n",
     "    return df_out\n",
     "\n",
@@ -134,14 +134,14 @@
     "        df = mean_df(gzp(dffs.iloc[i]['file']), 20, 20)\n",
     "        df['year'] = dffs.iloc[i]['year']\n",
     "        df['month'] = dffs.iloc[i]['month']\n",
-    "        dfo = dfo.append(df)\n",
+    "        dfo = pd.concat([dfo, df])\n",
     "    print('dfo mem size:', round(dfo.memory_usage().sum()/2**20, 0), 'MB')\n",
     "    \n",
     "    # Prepare output folder\n",
     "    save_path = 'C:\\\\data\\\\AIRS\\\\L1b\\\\_AIRS3\\\\'\n",
-    "        if not os.path.isdir(save_path):\n",
-    "            os.makedirs(save_path)\n",
-    "    \n",
+    "    if not os.path.isdir(save_path):\n",
+    "        os.makedirs(save_path)\n",
+    "\n",
     "    dfo.to_csv(save_path + str(year) + '_dailyavgs.csv.gz', compression = 'gzip', index=False, header=True)\n",
     "\n",
     "# clear df's from memory\n",
