Removed deprecated functions

--- a/_AIRS4_single_annual_csv_to_gridded_annual_avg_v2.ipynb
+++ b/_AIRS4_single_annual_csv_to_gridded_annual_avg_v2.ipynb
@@ -40,7 +40,7 @@
     "    # Add columns that will be filled next\n",
     "    df['year'] = 0\n",
     "    for i in range(len(df)):\n",
-    "        df.iloc[i, df.columns.get_loc('year')] = int(df['file'][i].rsplit('\\\\')[2].rsplit('_')[0])\n",
+    "        df.iloc[i, df.columns.get_loc('year')] = int(df['file'][i].rsplit('\\\\')[5].rsplit('_')[0])\n",
     "        #df['year'].iloc[i] = int(df['file'][i].rsplit('\\\\')[4].rsplit('_')[0])\n",
     "    return df\n",
     "\n",
@@ -59,7 +59,7 @@
     "\n",
     "    ct = df1['count'].sum()\n",
     "    if ct > 0:\n",
-    "        dfo = dfo.append(pd.DataFrame(df1.mean(numeric_only=True)).T.round(5))\n",
+    "        dfo = pd.concat([dfo, pd.DataFrame(df1.mean(numeric_only=True)).T.round(5)])\n",
     "        dfo.iloc[-1].at['count'] = ct\n",
     "        dfo = dfo.astype({'year': 'int32'})\n",
     "        dfo = dfo.astype({'count': 'int32'})\n",
@@ -107,7 +107,7 @@
    "source": [
     "for year in years:\n",
     "    df2 = pd.DataFrame()\n",
-    "    print('Reading in >1Gb file, please wait...')\n",
+    "    print('Reading in large file, please wait...')\n",
     "    file = dff.loc[dff['year'] == year]['file'].values[0]\n",
     "    df = gzp(file)\n",
     "    print('df mem size:', round(df.memory_usage().sum()/2**20, 0), 'MB')\n",
@@ -126,12 +126,12 @@
     "                dfm = df_grid(dfm, lat, lon)\n",
     "                dfm['lat'] = i\n",
     "                dfm['lon'] = j\n",
-    "                df2 = df2.append(dfm)\n",
+    "                df2 = pd.concat([df2, dfm])\n",
     "    \n",
     "    # Prepare output folder\n",
     "    save_path = 'C:\\\\data\\\\AIRS\\\\L1b\\\\_AIRS4\\\\'\n",
-    "        if not os.path.isdir(save_path):\n",
-    "            os.makedirs(save_path)\n",
+    "    if not os.path.isdir(save_path):\n",
+    "        os.makedirs(save_path)\n",
     "\n",
     "    df2.to_csv(save_path + str(year) +'_lat'+str(i)+'_lon'+str(j)+'.csv.gz', index=False, header=True, compression = 'gzip')\n",
     "            \n",
