--- a/_AIRS6_Figs_v6.ipynb
+++ b/_AIRS6_Figs_v6.ipynb
@@ -8,14 +8,14 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib\n",
+    "import matplotlib  # pip install matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
     "from matplotlib.gridspec import GridSpec\n",
     "import matplotlib.ticker as mticker\n",
-    "import seaborn as sns\n",
+    "import seaborn as sns   # pip install seaborn\n",
     "import math\n",
-    "import scipy\n",
+    "import scipy  #pip install scipy\n",
     "from scipy import stats\n",
     "import datatable as dt\n",
     "import os\n",
@@ -317,7 +317,7 @@
     "                                      )\n",
     "                dfmid = pd.concat([dfmid, data_in], axis=1)\n",
     "\n",
-    "            df = df.append(dfmid) \n",
+    "            df = pd.concat([df, dfmid]) \n",
     "\n",
     "        df = df/df.max().max() # Normalize to 1 for color assignment (0-1 RGB value)\n",
     "        df2[color] = df.sort_index().sort_index(axis=1)\n",
@@ -729,7 +729,7 @@
     "            test['lon'] = lon\n",
     "            test['month'] = month\n",
     "            test.set_index(['lon', 'month'], append=True, inplace = True)\n",
-    "            p5 = p5.append(test)\n",
+    "            p5 = pd.concat([p5, test])\n",
     "        except:\n",
     "            pass\n",
     "p5.sort_index(inplace = True)\n",
@@ -763,7 +763,7 @@
     "            test['lon'] = lon\n",
     "            test['month'] = month\n",
     "            test.set_index(['lon', 'month'], append=True, inplace = True)\n",
-    "            p5l = p5l.append(test)\n",
+    "            p5l = pd.concat([p5l, test])\n",
     "        except:\n",
     "            pass\n",
     "p5l.sort_index(inplace = True)\n",
@@ -839,7 +839,7 @@
     "    #test = test.rename_axis(['lat'])\n",
     "    test['lon'] = lon\n",
     "    test.set_index(['lon'], append=True, inplace = True)\n",
-    "    p2 = p2.append(test)\n",
+    "    p2 = pd.concat([p2, test])\n",
     "p2 = p2.groupby(['lat']).mean()\n",
     "for lat in np.arange(2, 9, 1):\n",
     "    p2o.loc[lat]['Pathway 2'] = scipy.integrate.trapz(p2.loc[lat].values, p2.loc[lat].index.values)\n",
@@ -868,7 +868,7 @@
     "            test['lon'] = lon\n",
     "            test['month'] = month\n",
     "            test.set_index(['lon', 'month'], append=True, inplace = True)\n",
-    "            p3 = p3.append(test)\n",
+    "            p3 = pd.concat([p3, test])\n",
     "        except:\n",
     "            pass\n",
     "p3.sort_index(inplace = True)\n",
@@ -900,7 +900,7 @@
     "            test['lon'] = lon\n",
     "            test['month'] = month\n",
     "            test.set_index(['lon', 'month'], append=True, inplace = True)\n",
-    "            p4 = p4.append(test)\n",
+    "            p4 = pd.concat([p4, test])\n",
     "        except:\n",
     "            pass\n",
     "p4.sort_index(inplace = True)\n",
@@ -1001,14 +1001,14 @@
     "    if len(files) != 12:\n",
     "        print(len(files), 'files found, instead of 12')\n",
     "    for file in files:\n",
-    "        rloci = rloci.append(pd.read_csv(file))\n",
+    "        rloci = pd.concat([rloci, pd.read_csv(file)])\n",
     "    try:\n",
     "        rloci = rloci.drop(['sci'], axis=1)\n",
     "    except:\n",
     "        pass\n",
     "    rloci = rloci.set_index(['time'])\n",
     "    rloci = rloci.astype('float16')\n",
-    "    rloc = rloc.append(rloci)\n",
+    "    rloc = pd.concat([rloc, rloci])\n",
     "    print(f'Year {year} done. Memory use:', round(rloc.memory_usage().sum()/2**20, 1), 'MB')\n",
     "\n",
     "rloci = []\n",
